Jar added, Changes