@@ -2,8 +2,8 @@ package Utils;
 
 import javafx.scene.media.AudioClip;
 
-import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URL;
 
 /**
  * Plays all sound effects in game
@@ -16,21 +16,39 @@ public class SoundControl {
     static final AudioClip MOVE;
 
     static {
-        try {
-            File startFile = new File("SFX\\Game_Start.wav");
-            final File captureFile = new File("SFX\\Capture.wav");
-            final File castlingFile = new File("SFX\\Castling.wav");
-            final File checkFile = new File("SFX\\Check.wav");
-            final File moveFile = new File("SFX\\Piece_Move.wav");
+        GAME_START = loadAudioClip("Game_Start.wav");
+        CAPTURE = loadAudioClip("Capture.wav");
+        CASTLING = loadAudioClip("Castling.wav");
+        CHECK = loadAudioClip("Check.wav");
+        MOVE = loadAudioClip("Piece_Move.wav");
+    }
 
-            GAME_START = new AudioClip(startFile.toURI().toURL().toString());
-            CAPTURE = new AudioClip(captureFile.toURI().toURL().toString());
-            CASTLING = new AudioClip(castlingFile.toURI().toURL().toString());
-            CHECK = new AudioClip(checkFile.toURI().toURL().toString());
-            MOVE = new AudioClip(moveFile.toURI().toURL().toString());
-        } catch (MalformedURLException e) {
-            throw new RuntimeException(e);
+    private static AudioClip loadAudioClip(String fileName) {
+        AudioClip audioClip = null;
+
+        // Try loading from the filesystem first
+        try {
+            // Load from the filesystem (works during development)
+            URL fileURL = new URL("file:resources/SFX/" + fileName);
+            audioClip = new AudioClip(fileURL.toExternalForm());
+        } catch (Exception e) {
+            // If filesystem loading fails, try to load from the classpath
+            try {
+                URL resourceURL = SoundControl.class.getResource("/SFX/" + fileName);
+                if (resourceURL == null) {
+                    throw new RuntimeException("Sound file not found: " + fileName);
+                }
+                audioClip = new AudioClip(resourceURL.toExternalForm());
+            } catch (Exception ex) {
+                ex.printStackTrace();
+            }
         }
+
+        if (audioClip == null) {
+            throw new RuntimeException("Sound could not be loaded: " + fileName);
+        }
+
+        return audioClip;
     }
 
     public static void playCheck() {
